@@ -337,6 +337,5 @@ static struct fuse_operations xmp_oper = {
 
 int main(int argc, char *argv[])
 {
-    fuse_main(argc, argv, &xmp_oper);
-    return 0;
+    return fuse_main(argc, argv, &xmp_oper);
 }
